# node_qrcode_beemly_binding

./: README.md  package.json
lib/: .index.js.swp  index.js
native/: Cargo.toml
native/src/: .lib.rs.swp  lib.rs
